--- a/Exploringlayout/app/src/main/res/layout/main_menu.xml
+++ b/Exploringlayout/app/src/main/res/layout/main_menu.xml
@@ -44,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
+            android:onClick="loadConstraintLayout"
             android:padding="10dp"
             android:text="LOAD" />
     </LinearLayout>
@@ -68,6 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
+            android:onClick="loadTableLayout"
             android:padding="10dp"
             android:text="LOAD" />
     </LinearLayout>
