--- a/CardViewLayout/app/src/main/res/layout/card_contents_2.xml
+++ b/CardViewLayout/app/src/main/res/layout/card_contents_2.xml
@@ -19,14 +19,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        app:srcCompat="@drawable/image_2" />
+        app:srcCompat="@drawable/sam_image2" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Proud Stand"
+        android:text="With Proud Standing"
         android:textSize="16sp" />
 
     <TextView
