--- a/CardViewLayout/app/src/main/res/layout/card_contents_3.xml
+++ b/CardViewLayout/app/src/main/res/layout/card_contents_3.xml
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        app:srcCompat="@drawable/image_3" />
+        app:srcCompat="@drawable/sam_image3" />
 
     <TextView
         android:id="@+id/textView8"
